<resources>
    <string name="app_name">les_2</string>
    <string name="meni_meni">meni meni</string>
    <string name="world">World!</string>
    <string name="enter_first_name">Enter first name!</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="swap_colors">Swap Colors</string>
    <string name="reset_colors">Reset Colors</string>
    <string name="navigate">navigate</string>

</resources>