<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
<!--   android:gravity="center_horizontal" -->
<!--    tools:ignore="ExtraText">-->

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_first_name"
        android:textColor="#0000FF" /> <!-- Blue Text -->


    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_last_name"
        android:textColor="@color/red" /> <!-- Red Text -->

    <Button
        android:id="@+id/swapColorsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple"
        android:textColor="@color/white"
        android:layout_gravity="left"
        android:text="@string/swap_colors" />

    <Button
        android:id="@+id/resetColorsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/reset_colors" />

    <Button
        android:id="@+id/navigator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/navigate"
        />
</LinearLayout>


